--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ hasCJKLanguage: true
 paginate: 7
 enableEmoji: true
 PygmentsCodeFences: false
-googleAnalytics: "UA-101799844-1" # UA-XXXXXXXX-X
+googleAnalytics: "" # UA-XXXXXXXX-X
 permalinks:
   posts: /:year/:month/:filename/
 
